<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.media3.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:show_buffering="when_playing"
        app:show_subtitle_button="true"
        app:use_controller="true" />

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioGroup
            android:id="@+id/streamGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/streamWidevineMediaItem">

            <RadioButton
                android:id="@+id/streamWidevineMediaItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stream_widevine_media_item"
                android:textColor="@android:color/white" />

            <RadioButton
                android:id="@+id/streamWidevineSessionManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stream_widevine_session_manager"
                android:textColor="@android:color/white" />

            <RadioButton
                android:id="@+id/streamClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stream_clear_dash"
                android:textColor="@android:color/white" />

            <RadioButton
                android:id="@+id/streamClearKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stream_clearkey"
                android:textColor="@android:color/white" />
        </RadioGroup>

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/status_ready"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
